--- a/guide.html
+++ b/guide.html
@@ -628,9 +628,30 @@
             </p>
 
             <div class="price-box">
-                <p>실측·상세견적 진행비</p>
+                <p>창호 정밀 실측 비용</p>
                 <div class="price-amount">300,000 원</div>
                 <p style="font-size: 0.9rem; color: var(--text-gray);">(부가세 별도)</p>
+                <p style="font-size: 1rem; font-weight: 600; color: var(--primary-color); margin-top: 0.5rem;">실측상세 창호
+                    정밀 실측</p>
+            </div>
+
+            <div
+                style="margin-top: 1rem; background-color: #fff9e6; padding: 1.5rem; border-radius: 12px; border: 1px solid #ffeeba;">
+                <h3
+                    style="font-size: 1.1rem; margin-bottom: 1rem; color: #b7791f; display: flex; align-items: center; gap: 0.5rem;">
+                    <span>!</span> 환불 규정
+                </h3>
+                <ul style="list-style: none; padding: 0; font-size: 0.95rem; color: #744210;">
+                    <li style="margin-bottom: 0.5rem; display: flex; gap: 0.5rem;">
+                        <span>•</span> 현장 답사 및 상담은 무료로 진행됩니다.
+                    </li>
+                    <li style="margin-bottom: 0.5rem; display: flex; gap: 0.5rem;">
+                        <span>•</span> 현장 실측이 완료된 이후에는 세부 견적서 수령 여부와 관계없이 환불이 불가합니다.
+                    </li>
+                    <li style="display: flex; gap: 0.5rem;">
+                        <span>•</span> 창호 정밀 실측이 진행된 경우 해당 비용은 환불되지 않습니다.
+                    </li>
+                </ul>
             </div>
 
             <ul class="service-list">
@@ -639,7 +660,7 @@
                     <span>무료</span>
                 </li>
                 <li>
-                    <span>현장실측 (동탄, 수원, 용인, 분당)</span>
+                    <span>현장 상담 (동탄, 수원, 용인, 분당)</span>
                     <span>포함</span>
                 </li>
                 <li>
@@ -725,42 +746,7 @@
                 </div>
             </div>
 
-            <!-- Separate Cost Items & Refund Policy -->
-            <div style="margin-top: 2rem;">
-                <div class="price-box" style="border-color: #ddd; background-color: #fcfcfc;">
-                    <div
-                        style="display: flex; align-items: start; gap: 0.5rem; justify-content: center; margin-bottom: 0.5rem;">
-                        <span style="font-weight: 600;">$ 별도 비용 항목</span>
-                    </div>
-                    <div
-                        style="display: flex; justify-content: space-between; align-items: center; border-top: 1px solid #eee; padding-top: 1rem; margin-top: 0.5rem; text-align: left;">
-                        <div>
-                            <strong style="display: block; font-size: 1rem;">창호 정밀 실측</strong>
-                            <span style="font-size: 0.85rem; color: #666;">창호 교체 또는 시공이 필요한 경우 필수</span>
-                        </div>
-                        <div style="font-weight: 700; font-size: 1.1rem;">300,000원</div>
-                    </div>
-                </div>
 
-                <div
-                    style="margin-top: 1rem; background-color: #fff9e6; padding: 1.5rem; border-radius: 12px; border: 1px solid #ffeeba;">
-                    <h3
-                        style="font-size: 1.1rem; margin-bottom: 1rem; color: #b7791f; display: flex; align-items: center; gap: 0.5rem;">
-                        <span>!</span> 환불 규정
-                    </h3>
-                    <ul style="list-style: none; padding: 0; font-size: 0.95rem; color: #744210;">
-                        <li style="margin-bottom: 0.5rem; display: flex; gap: 0.5rem;">
-                            <span>•</span> 현장 답사 및 상담은 무료로 진행됩니다.
-                        </li>
-                        <li style="margin-bottom: 0.5rem; display: flex; gap: 0.5rem;">
-                            <span>•</span> 현장 실측이 완료된 이후에는 세부 견적서 수령 여부와 관계없이 환불이 불가합니다.
-                        </li>
-                        <li style="display: flex; gap: 0.5rem;">
-                            <span>•</span> 창호 정밀 실측이 진행된 경우 해당 비용은 환불되지 않습니다.
-                        </li>
-                    </ul>
-                </div>
-            </div>
         </section>
 
         <!-- 10. A/S Policy (A/S 기준) -->
@@ -796,9 +782,9 @@
 
             <!-- Consultation Inquiry with Blue Phone Button -->
             <p style="margin-bottom: 1rem; font-weight:600; font-size: 1.1rem;">상담 문의</p>
-            <a href="tel:010-4650-7013"
+            <a href="tel:010-7653-5386"
                 style="display: inline-block; background: #2563eb; color: white; font-weight: 800; padding: 1rem 3rem; border-radius: 50px; text-decoration: none; font-size: 1.5rem; margin-bottom: 1.5rem; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);">
-                010-4650-7013
+                010-7653-5386
             </a>
 
             <div style="margin-bottom: 2.5rem;">
@@ -846,7 +832,7 @@
             <div class="footer-info"
                 style="margin-top: 3rem; margin-bottom: 2rem; opacity: 0.6; font-size: 0.85rem; line-height: 1.8;">
                 <p>경기도 화성시 반송동 3-10</p>
-                <p>연락처: <a href="tel:010-4650-7013" style="color: white; text-decoration: none;">010-4650-7013</a></p>
+                <p>연락처: <a href="tel:010-7653-5386" style="color: white; text-decoration: none;">010-7653-5386</a></p>
                 <p>이메일: <a href="mailto:designjig.office@gmail.com"
                         style="color: white; text-decoration: none;">designjig.office@gmail.com</a></p>
             </div>
